# drawset

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
benches/: sampling.rs
crates/kuji/: Cargo.toml  README.md
crates/kuji/src/: lib.rs
examples/: README.md  distribution_demo.rs  gumbel_softmax_demo.rs  streaming_reservoir.rs  weighted_topk.rs
scripts/: plot_bench.py
src/: gumbel.rs  lib.rs  neighbor.rs  qmc.rs  reservoir.rs  tconorm.rs  thinning.rs
tests/: property_tests.rs
