[package]
name = "drawset"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Sampling and subset-selection primitives"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/drawset"
homepage = "https://github.com/arclabs561/drawset"
documentation = "https://docs.rs/drawset"
keywords = ["sampling", "subset", "gumbel", "reservoir"]
categories = ["algorithms", "science"]
include = ["/src/**/*.rs", "/examples/**/*.rs", "/tests/**/*.rs", "/benches/**/*.rs", "/Cargo.toml", "/Cargo.lock", "/LICENSE-*", "/README.md"]

[workspace]
members = ["crates/kuji"]
resolver = "2"

[dependencies]
rand = "0.9"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
rand_chacha = "0.9"
proptest = "1.9"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sampling"
harness = false
